# installer

./: .gitignore  CMakeLists.txt  README.md  config.h.in  config.yml  go.mod  go.sum  main.go  ui.go
app/: app.go  debug.go  dialog.go  page.go  signals.go  start.go  ui.go  utils.go
assets/: CMakeLists.txt  desktop.in  gresource.xml.in  polkit.policy  ui.glade  ui.glade~
cmd/cli/: cli.go
conf/: installer.json
disk/: disk.go
firstlogin/: data.go  locale.go  post.go  setup.go  timezone.go  user.go
installer/: confirm.go  const.go  data.go  disk.go  install.go  installer.go  memory.go  signals.go  ui.go  utils.go  verification.go  verify.go
internal/installer/: disk.go  utils.go
internal/progress/: progress.go
perm/: dev.rlxos.system-setup.policy
scripts/: genui.sh  install.sh
setup/: account.go  const.go  locale.go  post.go  setup.go  timezone.go
src/: CMakeLists.txt  locale.hh  logging.hh  main.cc
src/disk/: disk.cc  disk.hh
src/interface/: application.cc  page.hh  window.cc  window.hh
src/interface/checkup-page/: checkup-page.hh
src/interface/disk-page/: disk-page.cc  disk-page.hh
src/interface/finish-page/: finish-page.cc  finish-page.hh
src/interface/header/: header.cc  header.hh
src/interface/install-page/: install-page.hh
src/interface/list-page/: list-page.cc  list-page.hh
src/interface/listbox/: listbox.cc  listbox.hh
src/interface/process-page/: process-page.cc  process-page.hh
src/interface/stack/: stack.cc  stack.hh
src/interface/welcome-page/: welcome-page.cc  welcome-page.hh
src/internal/checkup/: checkup.cc  checkup.hh
src/internal/checkup/disk/: disk.cc  disk.hh
src/internal/checkup/efi/: efi.cc  efi.hh
src/internal/checkup/memory/: memory.cc  memory.hh
src/internal/checkup/permission/: permission.cc  permission.hh
src/internal/checkup/search-boot/: search-boot.cc  search-boot.hh
src/internal/checkup/system-image/: system-image.cc  system-image.hh
src/internal/checkup/system-info/: system-info.cc  system-info.hh
src/internal/data/: data.hh
src/internal/install/: install.cc  install.hh
src/internal/install/bootloader/: bootloader.cc  bootloader.hh
src/internal/install/kernel/: kernel.cc  kernel.hh
src/internal/install/prepare/: prepare.cc  prepare.hh
src/internal/install/system-image/: system-image.cc  system-image.hh
src/utils/: exec.hh  humanize.hh  temp.hh
src/worker/: process.hh  worker.cc  worker.hh
